--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -471,8 +471,8 @@ scrollobjSize:Math.ceil(PTM(".uldiv").find("li").length*1)
   
   <div class="section fp-auto-height">
   <div class="wk_footer_side">
-    <div class="wk_footer">Copyright © 2017 17sucai.com <a title="baidu" href="#" target="_blank">技术支持：</a> 备案号：<a href="http://www.miitbeian.gov.cn/" target="_blank" title="苏ICP12345678">苏ICP12345678</a> <br />
-      友情链接：<a href='http://www.17sucai.com/' target='_blank'>网页特效</a> <a href='http://www.17sucai.com/' target='_blank'>中文模板</a> <a href='http://www.17sucai.com/' target='_blank'>织梦模板</a> <a href='http://www.17sucai.com/' target='_blank'>discuz模板</a> <a href='http://www.17sucai.com/' target='_blank'>手机网站模板</a> <a href='http://www.17sucai.com/' target='_blank'>网站模板</a> <a href='http://www.17sucai.com/' target='_blank'>网站源码</a> <a href='#' target='_blank'>图标下载</a> <a href='#' target='_blank'>仿站</a> </div>
+    <div class="wk_footer">Copyright © 2017 17sucai.com <a title="baidu" href="#" target="_blank">技术支持：</a> 备案号：<a href="http://www.miitbeian.gov.cn/" target="_blank" title="苏ICP12345678">京ICP12345678</a> <br />
+      友情链接：<a href='' target='_blank'>网页特效</a> <a href='' target='_blank'>xxxx</a> <a href='' target='_blank'>xxxx</a> <a href='' target='_blank'>xxxx</a> <a href='' target='_blank'>xxxx</a> <a href='' target='_blank'>xxxx</a> <a href='' target='_blank'>xxxx</a> <a href='#' target='_blank'>xxxx</a> <a href='#' target='_blank'>xxxx</a> </div>
   </div>
 </div>
 
